8252304: assertBodyPublisherEqual added to test; added comment to newBuilder